# LinearAlgebra

./: CMakeLists.txt  README.md
src/: library.cpp  library.h  main.cpp
src/Fraction/: Fraction.h
src/Index/: Index.cpp  Index.h
src/Matrix/: Matrix.cpp  Matrix.h
src/Matrix/Slice/: Slice.cpp  Slice.h
src/Slice/: Slice.cpp  Slice.h
src/Utils/: Utils.cpp
